zokrates_cli/examples/compile_errors/loop_too_large.zok
def main() {
    for u32 i in 0..-1 {}
    return;
}
